# aggregate_point_processes

./: .gitignore  README.md  pyproject.toml  test_utils_standalone.py
aggpp/models/: __init__.py  _utils.py
aggpp/models/tests/: test_create_overlap_weights.py  test_find_overlap_intervals.py
aggpp/sim/: __init__.py  _generate_data.py
models/: __init__.py
notebook/: basic_sim.ipynb  intro_to_pyro.ipynb  overlap_bins_type1.ipynb  overlap_bins_type2.ipynb  sim_disjoint.ipynb  sim_overlap.ipynb
